# knowledge-graph-builder

./: .env.example  .gitignore  CLAUDE.md  LICENSE.md  README.md  SETUP.md  justfile  main.py  pyproject.toml  pyrightconfig.json
schemas/: sioc_min.yaml
scripts/: canonicalize_last_7_days.py  dump_rdf.py  extract_last_7_days.py  load_into_oxigraph.py  transform_to_linkml.py
src/builder/: sioc_model.py
src/knowledge_graph_builder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
